<?xml version="1.0"?>
<!--| A comment where you can put copyright, author, contact, website etc
    Copyright (C) 2019 
    Authors:  
    email:    
    Other contributors:
              
    website:  

    This file is part of maybepartofmetapackage

    yourpackagename is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    yourpackagename is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

|-->
<package>
  <name>yourpackagename</name>
  <version>0.0.1</version>
  <description>Describe what your package does</description>

  <maintainer email="youremail@gmail.com">Your Name</maintainer>


  <license>GPLv3</license>

  <url type="repository">https://github.com/yourreponame</url>
  <url type="bugtracker">https://github.com/yourreponame/issues</url>

  <author email="youremail@gmail.com">Your Name</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>realtime_tools</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>realtime_tools</run_depend>

  <export>
  </export>
</package>